# pypack_sleek_a-ytdownloader-pkg

./: .dockerignore  .gitignore  CONTRIBUTING.md  CONTRIBUTING_ko.md  Dockerfile  LICENSE_ko.md  MANIFEST.in  README.md  README_ko.md  app.py  info.json  pyproject.toml  requirements.txt  sleek-downloader.spec  start_server.sh
.github/workflows/: build.yml
static/css/: style.css
static/js/: script.js
templates/: index.html  intro.html
