[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflask-sleek-ytdownloader"
version = "1.0.0"
description = "A sleek, theme-aware Youtube Downloader using Flask and yt-dlp"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rheehose", email = "rheehose@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask",
    "yt-dlp"
]

[project.scripts]
sleek-downloader = "sleek_downloader.app:main"

[tool.setuptools]
packages = ["sleek_downloader"]

[tool.setuptools.package-data]
sleek_downloader = ["static/**/*", "templates/*"]
